syntax = "proto3";
option java_multiple_files = true;
package com.pass.grpc;


message PasswordRequest {
}

message PasswordResponse {
  repeated PasswordDetails passwords = 1;
}

message PasswordDetails{
  string username = 1;
  string password = 2;
  string url = 3;
  string description = 4;
  string iv =5;
}

service PasswordService{
  rpc password(PasswordRequest) returns (PasswordResponse);
}
